--- a/entity/templates/public_views_create.html
+++ b/entity/templates/public_views_create.html
@@ -1,23 +1,21 @@
-<section data-ng-controller="<%= entityName %>sController">
-	<form class="form-horizontal" data-ng-submit="create()">
-
-		<div class="control-group">
-			<label class="control-label" for="name">Name</label>
-			<div class="controls">
-				<input type="text" data-ng-model="name" id="name" placeholder="Name" required>
-			</div>
-		</div>
-		<div class="control-group">
-			<label class="control-label" for="description">Description</label>
-			<div class="controls">
-				<textarea data-ng-model="description" id="description" cols="30" rows="10" placeholder="Description"></textarea>
-			</div>
-		</div>
-
-		<div class="control-group">
-			<div class="controls">
-				<input type="submit" class="btn">
-			</div>
-		</div>
-	</form>
+<section data-ng-controller="<%=formalEntityName%>sController">
+    <form class="form-horizontal col-md-6" role="form" data-ng-submit="create()">
+        <div class="form-group">
+            <label mean-token="'create-name'" class="col-md-3 control-label">Name</label>
+            <div class="col-md-9">
+                <input type="text" class="form-control" data-ng-model="name" id="name" placeholder="Name" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label mean-token="'create-description'" for="description" class="col-md-3 control-label">Description</label>
+            <div class="col-md-9">
+                <textarea data-ng-model="description" id="description" cols="30" rows="10" placeholder="Description" class="form-control" required></textarea>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-3 col-md-9">
+                <button type="submit" class="btn btn-info">Submit</button>
+            </div>
+        </div>
+    </form>
 </section>
