--- a/entity/templates/public_views_edit.html
+++ b/entity/templates/public_views_edit.html
@@ -1,27 +1,21 @@
-<section data-ng-controller="<%= entityName %>sController" data-ng-init="findOne()">
-	<form class="form-horizontal" data-ng-submit="update()">
-
-		<div class="control-group">
-			<label class="control-label" for="name">Name</label>
-
-			<div class="controls">
-				<input type="text" data-ng-model="<%= _.slugify(entityName) %>.name" id="name" placeholder="Name" required>
-				</input>
-			</div>
-		</div>
-		<div class="control-group">
-			<label class="control-label" for="description">Description</label>
-
-			<div class="controls">
-				<textarea data-ng-model="<%= _.slugify(entityName) %>.description" id="description" cols="30" rows="10" placeholder="Description">
-				</textarea>
-			</div>
-		</div>
-
-		<div class="control-group">
-			<div class="controls">
-				<input type="submit" class="btn">
-			</div>
-		</div>
-	</form>
+<section data-ng-controller="<%=formalEntityName%>sController" data-ng-init="findOne()">
+    <form class="form-horizontal col-md-6" role="form" data-ng-submit="update()">
+        <div class="form-group">
+            <label mean-token="'edit-name'" for="name" class="col-md-2 control-label">Name</label>
+            <div class="col-md-10">
+                <input type="text" class="form-control" data-ng-model="<%=entityName%>.name" id="name" placeholder="Name" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label mean-token="'edit-description'" for="description" class="col-md-2 control-label">Description</label>
+            <div class="col-md-10">
+                <textarea data-ng-model="<%=entityName%>.description" id="description" cols="30" rows="10" placeholder="Description" class="form-control" required></textarea>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <button mean-token="'edit-submit'" type="submit" class="btn btn-default">Submit</button>
+            </div>
+        </div>
+    </form>
 </section>
