--- a/entity/templates/public_views_list.html
+++ b/entity/templates/public_views_list.html
@@ -1,12 +1,11 @@
-<section data-ng-controller="<%= entityName %>sController" data-ng-init="find()">
-	<ul class="<%= _.slugify(entityName) %>s unstyled">
-		<li data-ng-repeat="<%= _.slugify(entityName) %> in <%= _.slugify(entityName) %>s">
-			<span>{{<%= _.slugify(entityName) %>.created | date:'medium'}}</span> /
-			<span>{{<%= _.slugify(entityName) %>.user.name}}</span>
-			<h2><a data-ng-href="#!/<%= _.slugify(entityName) %>s/{{<%= _.slugify(entityName) %>._id}}">{{<%= _.slugify(entityName) %>.name}}</a></h2>
-			<div>{{<%= _.slugify(entityName) %>.description}}</div>
-		</li>
-	</ul>
-	<a href="/#!/<%= _.slugify(entityName) %>s/create">Create</a>
-	<h1 data-ng-hide="!<%= _.slugify(entityName) %>s || <%= _.slugify(entityName) %>s.length">No <%= _.slugify(entityName) %>s yet. <br> Why don't you <a href="/#!/<%= _.slugify(entityName) %>s/create">Create One</a>?</h1>
+<section data-ng-controller="<%=formalEntityName%>sController" data-ng-init="find()">
+    <ul class="<%=entityName%>s unstyled">
+        <li data-ng-repeat="<%=entityName%> in <%=entityName%>s">
+            <span>{{<%=entityName%>.created | date:'medium'}}</span> /
+            <span>{{<%=entityName%>.user.name}}</span>
+            <h2><a data-ng-href="#!/<%=entityName%>s/{{<%=entityName%>._id}}">{{<%=entityName%>.name}}</a></h2>
+            <div>{{<%=entityName%>.description}}</div>
+        </li>
+    </ul>
+    <h1 data-ng-hide="!<%=entityName%>s || <%=entityName%>s.length">No <%=entityName%>s yet. <br> Why don't you <a href="/#!/<%=entityName%>s/create">Create One</a>?</h1>
 </section>
